fix issue overlap.

--- a/assets/css/_application.scss
+++ b/assets/css/_application.scss
@@ -4,9 +4,6 @@ body,
 { 
     min-height: calc(100% - 45px);
 }
-body{
-	overflow: hidden;
-}
 body,
 p,
 a,
